# fred-api

./: Cargo.toml  README.md
src/: error.rs  errors.rs  lib.rs  response.rs
tests/: test.rs
